--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +35,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/megap/anaconda3/Library/include\n",
+      "    lib directory: C:/Users/megap/anaconda3/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep1583119523984\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.12'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  not found:\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(np.__version__)\n",
+    "print(np.show_config())### [your code here]\n"
    ]
   },
   {
@@ -51,11 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np\n",
+    "a = np.array([[[1,2,3,4,5], [3,4,5,6,7], [8,9,10,11,12]],[[7,8,9,10,11], [9,10,11,12,13], [13,14,15,16,17]]])\n",
+    "print (a.shape)### [your code here]\n"
    ]
   },
   {
@@ -68,11 +160,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3  4  5]\n",
+      "  [ 3  4  5  6  7]\n",
+      "  [ 8  9 10 11 12]]\n",
+      "\n",
+      " [[ 7  8  9 10 11]\n",
+      "  [ 9 10 11 12 13]\n",
+      "  [13 14 15 16 17]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print (a)### [your code here]\n"
    ]
   },
   {
@@ -85,10 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "b = np.ones((5,2,3))\n",
     "### [your code here]\n"
    ]
   },
@@ -102,11 +210,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print (b)### [your code here]\n"
    ]
   },
   {
@@ -360,7 +489,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
